--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "firebase": "^9.14.0",
     "framer-motion": "^7.6.12",
     "highlight.js": "^11.7.0",
+    "html-react-parser": "^5.0.11",
     "i18next": "^22.0.6",
     "i18next-browser-languagedetector": "^7.0.1",
     "lodash": "^4.17.21",
