--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "html-react-parser": "^5.0.11",
     "i18next": "^22.0.6",
     "i18next-browser-languagedetector": "^7.0.1",
+    "imgur": "^2.3.0",
     "lodash": "^4.17.21",
     "mapbox-gl": "^2.11.0",
     "next": "^13.0.5",
